--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% layout('layout') -%>
 Select login-provider:<br />
-<a href="/auth/twitter">Sign in with Twitter</a><br />
+<!--<a href="/auth/twitter">Sign in with Twitter</a><br />-->
 <a href="/auth/facebook">Sign in with Facebook</a><br />
 <a href="/auth/google">Sign in with Google</a><br />
 <a href="/auth/linkedin">Sign in with LinkedIn</a><br />
