Fixed review comments from Morten

--- a/lib/email/templates/validate-email/html.ejs
+++ b/lib/email/templates/validate-email/html.ejs
@@ -1,2 +1,2 @@
 <h1>Hi <%= name %></h1>
-Click <a href="<%= url %>">here</a> to validate password.
+Click <a href="<%= url %>">here</a> to verify your email-address.
