Store last name and first name separate, and send both to MailChimp.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,5 @@
 <% if (!user) { %>
 	<p>You're not supposed to be here. Visit <a href="http://scripler.com">Scripler</a>.</p>
 <% } else { %>
-	<p>Hello, <%= user.name %>.</p>
+	<p>Hello, <%= user.firstname %>.</p>
 <% } %>
