--- a/public/css/pages/frontpage.css
+++ b/public/css/pages/frontpage.css
@@ -193,6 +193,9 @@ div.half {
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
 }
+.button.login {
+	width: 120px;
+}
 .try-button {
 	width: 300px;
 	height: 50px;
