align social icons on the side of login button

--- a/public/css/pages/frontpage.css
+++ b/public/css/pages/frontpage.css
@@ -114,7 +114,8 @@ div.half {
 
 .socialicons {
     text-align: center;
-    padding-top: 20px;
+    margin-top: -38px;
+    float: right;
 }
 .socialicon {
 	background-color: #fff;
