--- a/public/css/modules/navigation.css
+++ b/public/css/modules/navigation.css
@@ -29,7 +29,7 @@
 
 .menu-top ul {
 	margin: 0 auto;
-	width: 950px;
+	width: 100%;
 	list-style: none;
 	text-align: center;
 }
@@ -105,8 +105,8 @@
 	padding: 0.6em;
 }
 .menu-left li .arrow-field .arrow {
-	width: 0; 
-	height: 0; 
+	width: 0;
+	height: 0;
 	border-top: 9px solid transparent;
 	border-bottom: 9px solid transparent;
 	border-left: 15px solid white;
