unhide login for publicdemo

--- a/public/css/pages/frontpage.css
+++ b/public/css/pages/frontpage.css
@@ -141,6 +141,8 @@ div.half {
 
 .socialicons {
 	text-align: center;
+	margin-top: -38px;
+	float: right;
 }
 .socialicon {
 	background-color: #fff;
