registration successful or validate email show text in center an white

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -201,6 +201,13 @@ textarea#rename {
 	width: 400px;
 	text-align: left
 }
+.registration-text.validate {
+	color: #fff;
+	text-align: center;
+	float: none;
+	width: auto;
+	opacity: 1;
+}
 .button.registration-button {
 	font-size: 15px;
 }
