--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -123,7 +123,7 @@ a:hover {
 	color: #333;
 }
 
-input {
+input:not(["checkbox"]) {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
 	border-radius: 1px;
