--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -1,15 +1,16 @@
 .menu-left, .menu-right {
-  position: absolute;
-  top: 0;
-  transition: all 2s;
-  -moz-transition: all 2s;
-  -ms-transition: all 2s;
-  -webkit-transition: all 2s;
-  -o-transition: all 2s;
+	z-index: 1;
+	position: absolute;
+	top: 0;
+	transition: all 2s;
+	-moz-transition: all 2s;
+	-ms-transition: all 2s;
+	-webkit-transition: all 2s;
+	-o-transition: all 2s;
 }
 .menu-left {
   left: 0;
-  margin: 0 0 0 -392px;
+  margin: 0 0 0 -260px;
 }
 .menu-right {
   right: 0;
@@ -76,7 +77,7 @@
   float: left;
 }
 .menu-left .content {
-	width: 392px;
+	width: 260px;
 }
 .menu-right .content {
 	width: 200px;
