hide bottom scrolbar

--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -29,6 +29,7 @@ body {
 	background: none #ececec;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	color: #666;
+	overflow-x: hidden
 }
 
 h1 {
